Fixed resizing w/ flex-wrap

--- a/01-drum-kit/src/App.css
+++ b/01-drum-kit/src/App.css
@@ -12,6 +12,7 @@ body,html {
 
 .keys-container {
   display: flex;
+  flex-wrap: wrap;
   flex: 1;
   min-height: 100vh;
   align-items: center;
